fix the uncompiled flicker on load

--- a/style.css
+++ b/style.css
@@ -17,3 +17,8 @@
 {
     padding:0px 4px !important;
 }
+
+[v-cloak]
+{
+    display: none;
+}
